--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/WeiZm2222/sctp-312-cd-serverless/issues"
   },
-  "homepage": "https://github.com/WeiZm2222/sctp-312-cd-serverless#readme"
+  "homepage": "https://github.com/WeiZm2222/sctp-312-cd-serverless#readme",
+  "dependencies": {
+    "serverless": "^3.36.0"
+  }
 }
