--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/WeiZm2222/sctp-312-cd-serverless#readme",
   "dependencies": {
     "serverless": "^3.36.0"
+  },
+  "devDependencies": {
+    "serverless-offline": "^13.2.1"
   }
 }
